--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -31,7 +31,7 @@
 }
 
 .header a,
-button {
+.header button {
   background-color: #131822;
   color: rgb(255, 255, 255);
   font-size: 20px;
@@ -43,7 +43,7 @@ button {
 }
 
 .header a:hover,
-button:hover {
+.header button:hover {
   background-color: rgb(232, 234, 238);
   color: #131822;
   text-decoration: none;
