--- a/src/pages/Homepage/style.css
+++ b/src/pages/Homepage/style.css
@@ -17,7 +17,7 @@
 .homepage h2 {
   font-size: 30px;
   margin-top: 50px;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 
 .homepage h3 {
@@ -27,5 +27,5 @@
 }
 
 .homepage p {
-  margin: 20px 0px;
+  margin: 20px 0;
 }
